--- a/freecodecamp-tribute-page/codepen/src/index.html
+++ b/freecodecamp-tribute-page/codepen/src/index.html
@@ -2,14 +2,10 @@
 
 <main id="main">
   <h1 id="title">Jack and Jill</h1>
-  <div id="img-div">
-    <div class="content_wrapper">
-      <div class="content">
-        <a href="http://clipart-library.com/clipart/pcqr5B5oi.htm">
-          <img id="image" src="http://clipart-library.com/images/pcqr5B5oi.jpg" alt="Image from clipart-library.com"/>
-        </a>
-      </div>
-    </div>
+  <div id=img-div>
+    <a href="http://clipart-library.com/clipart/pcqr5B5oi.htm">
+      <img id="image" src="http://clipart-library.com/images/pcqr5B5oi.jpg" alt="Image from clipart-library.com"/>
+    </a>
     <figcaption id="img-caption">
       Jack and Jill, the preeminent nursery rhyme stars
     </figcaption>
