--- a/freecodecamp-tribute-page/local/index.html
+++ b/freecodecamp-tribute-page/local/index.html
@@ -2,24 +2,17 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - FreeCodeCamp Tribute Page v3</title>
+  <title>FreeCodeCamp Tribute Page</title>
   <link rel="stylesheet" href="./style.css">
-
 </head>
 <body>
-<!-- partial:index.partial.html -->
 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-
 <main id="main">
   <h1 id="title">Jack and Jill</h1>
-  <div id="img-div">
-    <div class="content_wrapper">
-      <div class="content">
-        <a href="http://clipart-library.com/clipart/pcqr5B5oi.htm">
-          <img id="image" src="http://clipart-library.com/images/pcqr5B5oi.jpg" alt="Image from clipart-library.com"/>
-        </a>
-      </div>
-    </div>
+  <div id=img-div>
+    <a href="http://clipart-library.com/clipart/pcqr5B5oi.htm">
+      <img id="image" src="http://clipart-library.com/images/pcqr5B5oi.jpg" alt="Image from clipart-library.com"/>
+    </a>
     <figcaption id="img-caption">
       Jack and Jill, the preeminent nursery rhyme stars
     </figcaption>
@@ -38,8 +31,5 @@
   <p>If you have time, you should read more about these characters on their <a id="tribute-link" href="https://en.wikipedia.org/wiki/Jack_and_Jill_(nursery_rhyme)" target="_blank"> Wikipedia entry</a>.</p>
   </div>
 </main>
-<!-- partial -->
-  <script  src="./script.js"></script>
-
 </body>
 </html>
