added modal image functionality

--- a/flexbox-image-gallery-modal/index.html
+++ b/flexbox-image-gallery-modal/index.html
@@ -6,59 +6,146 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+<!-- START Image Gallery Links -->
 <ul class="nobull">
   <li>
-    <img src="https://i.postimg.cc/CL8v3ZjW/pexels-adrianna-calvo-57627.jpg"/>
+    <a href="#img1">
+      <img src="https://i.postimg.cc/CL8v3ZjW/pexels-adrianna-calvo-57627.jpg"/>
+    </a>
   </li>
   <li>
-    <img src="https://i.postimg.cc/0NVZY7sJ/pexels-bin-ziegler-1364729.jpg"/>
+    <a href="#img2">
+      <img src="https://i.postimg.cc/0NVZY7sJ/pexels-bin-ziegler-1364729.jpg"/>
+    </a>
   </li>
   <li>
-    <img src="https://i.postimg.cc/MTX5dX63/pexels-burst-374825.jpg"/>
+    <a href="#img3">
+      <img src="https://i.postimg.cc/MTX5dX63/pexels-burst-374825.jpg"/>
+    </a>
   </li>
   <li>
-    <img src="https://i.postimg.cc/ZY2NrWtD/pexels-caio-69371.jpg"/>
+    <a href="#img4">
+      <img src="https://i.postimg.cc/ZY2NrWtD/pexels-caio-69371.jpg"/>
+    </a>
   </li>
   <li>
-    <img src="https://i.postimg.cc/DwKbMRzr/pexels-charles-1851164.jpg"/>
+    <a href="#img5">
+      <img src="https://i.postimg.cc/DwKbMRzr/pexels-charles-1851164.jpg"/>
+    </a>
   </li>
   <li>
-    <img src="https://i.postimg.cc/GtWsr5x1/pexels-chevanon-photography-1108099.jpg"/>
+    <a href="#img6">
+      <img src="https://i.postimg.cc/GtWsr5x1/pexels-chevanon-photography-1108099.jpg"/>
+    </a>
   </li>
   <li>
-    <img src="https://i.postimg.cc/3xHLYK1W/pexels-chris-f-1144410.jpg"/>
+    <a href="#img7">
+      <img src="https://i.postimg.cc/3xHLYK1W/pexels-chris-f-1144410.jpg"/>
+    </a>  
   </li>
   <li>
-    <img src="https://i.postimg.cc/C5zjwDyb/pexels-dominika-roseclay-2023384.jpg"/>
+    <a href="#img8">
+      <img src="https://i.postimg.cc/C5zjwDyb/pexels-dominika-roseclay-2023384.jpg"/>
+    </a>
   </li>
   <li>
-    <img src="https://i.postimg.cc/JzcBVKy9/pexels-hilary-halliwell-38008.jpg"/>
+    <a href="#img9">
+      <img src="https://i.postimg.cc/JzcBVKy9/pexels-hilary-halliwell-38008.jpg"/>
+    </a>
   </li>
   <li>
-    <img src="https://i.postimg.cc/fLFKFZkz/pexels-jozef-feh-r-1633522.jpg"/>
+    <a href="#img10">
+      <img src="https://i.postimg.cc/fLFKFZkz/pexels-jozef-feh-r-1633522.jpg"/>
+    </a>
   </li>
   <li>
-    <img src="https://i.postimg.cc/T2Dqwzpb/pexels-kat-jayne-551628.jpg"/>
+    <a href="#img11">
+      <img src="https://i.postimg.cc/T2Dqwzpb/pexels-kat-jayne-551628.jpg"/>
+    </a>
   </li>
   <li>
-    <img src="https://i.postimg.cc/prFZM7nD/pexels-lumn-406014.jpg"/>
+    <a href="#img12">
+      <img src="https://i.postimg.cc/prFZM7nD/pexels-lumn-406014.jpg"/>
+    </a>
   </li>
   <li>
-    <img src="https://i.postimg.cc/C1ZCbt7W/pexels-nancy-guth-850602.jpg"/>
+    <a href="#img13">
+      <img src="https://i.postimg.cc/C1ZCbt7W/pexels-nancy-guth-850602.jpg"/>
+    </a>
   </li>
   <li>
-    <img src="https://i.postimg.cc/L6FkZx1b/pexels-pixabay-160846.jpg"/>
+    <a href="#img14">
+      <img src="https://i.postimg.cc/L6FkZx1b/pexels-pixabay-160846.jpg"/>
+    </a>
   </li>
   <li>
-    <img src="https://i.postimg.cc/T2LQbyHp/pexels-pixabay-33287.jpg"/>
+    <a href="#img15">
+      <img src="https://i.postimg.cc/T2LQbyHp/pexels-pixabay-33287.jpg"/>
+    </a>
   </li>
   <li>
-    <img src="https://i.postimg.cc/BvnBntKZ/pexels-pixabay-35638.jpg"/>
+    <a href="#img16">
+      <img src="https://i.postimg.cc/BvnBntKZ/pexels-pixabay-35638.jpg"/>
+    </a>
   </li>
   <li>
-    <img src="https://i.postimg.cc/FKCgdmyy/pexels-pixabay-39317.jpg"/>
+    <a href="#img17">
+      <img src="https://i.postimg.cc/FKCgdmyy/pexels-pixabay-39317.jpg"/>
+    </a>
   </li>
   <li></li>
 </ul>
+<!-- END Image Gallery Links -->
+
+<!-- START Modal Image -->
+<a href="#" class="modal" id="img1">
+  <span style="background-image: url('https://i.postimg.cc/CL8v3ZjW/pexels-adrianna-calvo-57627.jpg')"></span>
+</a>
+<a href="#" class="modal" id="img2">
+  <span style="background-image: url('https://i.postimg.cc/0NVZY7sJ/pexels-bin-ziegler-1364729.jpg')"></span>
+</a>
+<a href="#" class="modal" id="img3">
+  <span style="background-image: url('https://i.postimg.cc/MTX5dX63/pexels-burst-374825.jpg')"></span>
+</a>
+<a href="#" class="modal" id="img4">
+  <span style="background-image: url('https://i.postimg.cc/ZY2NrWtD/pexels-caio-69371.jpg')"></span>
+</a>
+<a href="#" class="modal" id="img5">
+  <span style="background-image: url('https://i.postimg.cc/DwKbMRzr/pexels-charles-1851164.jpg')"></span>
+</a>
+<a href="#" class="modal" id="img6">
+  <span style="background-image: url('https://i.postimg.cc/GtWsr5x1/pexels-chevanon-photography-1108099.jpg')"></span>
+</a>
+<a href="#" class="modal" id="img7">
+  <span style="background-image: url('https://i.postimg.cc/3xHLYK1W/pexels-chris-f-1144410.jpg')"></span>
+</a>
+<a href="#" class="modal" id="img8">
+  <span style="background-image: url('https://i.postimg.cc/C5zjwDyb/pexels-dominika-roseclay-2023384.jpg')"></span>
+<a href="#" class="modal" id="img9">
+  <span style="background-image: url('https://i.postimg.cc/JzcBVKy9/pexels-hilary-halliwell-38008.jpg')"></span>
+</a>
+<a href="#" class="modal" id="img10">
+  <span style="background-image: url('https://i.postimg.cc/fLFKFZkz/pexels-jozef-feh-r-1633522.jpg')"></span>
+</a>
+<a href="#" class="modal" id="img11">
+  <span style="background-image: url('https://i.postimg.cc/T2Dqwzpb/pexels-kat-jayne-551628.jpg')"></span>
+</a>
+<a href="#" class="modal" id="img12">
+  <span style="background-image: url('https://i.postimg.cc/prFZM7nD/pexels-lumn-406014.jpg')"></span>
+</a>
+<a href="#" class="modal" id="img13">
+  <span style="background-image: url('https://i.postimg.cc/C1ZCbt7W/pexels-nancy-guth-850602.jpg')"></span>
+</a>
+<a href="#" class="modal" id="img14">
+  <span style="background-image: url('https://i.postimg.cc/L6FkZx1b/pexels-pixabay-160846.jpg')"></span>
+</a>
+<a href="#" class="modal" id="img15">
+  <span style="background-image: url('https://i.postimg.cc/T2LQbyHp/pexels-pixabay-33287.jpg')"></span>
+</a>
+<a href="#" class="modal" id="img16">
+  <span style="background-image: url('https://i.postimg.cc/BvnBntKZ/pexels-pixabay-35638.jpg')"></span>
+<a href="#" class="modal" id="img17">
+  <span style="background-image: url('https://i.postimg.cc/FKCgdmyy/pexels-pixabay-39317.jpg')"></span>
+<!-- END Modal Image -->
 </body>
 </html>
